--- a/index.html
+++ b/index.html
@@ -1,14 +1,23 @@
 ﻿<!DOCTYPE html>
+<link rel="stylesheet" href="tw.css" />
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <title>Elavus Teamwork Event - Benefiting the Navy Seal Foundation</title>
 </head>
 <body>
-    <ul>
-        <li>Donate to the cause <a href="https://impact.navysealfoundation.org/team/255331" target="_blank">here</a>.</li>
-        <li>See the list of WODs <a href="https://drive.google.com/file/d/1YEKXqXMBWL2l_29ukPjtbclxHrZOUM8J/view" target="_blank">here</a>.</li>
-        <li>See the signup overview <a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vTJ4qbSz8TeNa0ropgjGPTEjq10XmJO_BSUeJjF4Kmjl5p6-_PeWoxS5p4M90CPawoIz3Jz333X2z7L/pubhtml?gid=2010312221&single=true" target="_blank">here</a>.</li>
-        <li>Run the signup form <a href="https://docs.google.com/forms/d/e/1FAIpQLSdeKaa7yzGwI__VOJAyP9dzbamfRQvEBsL6ZbPDtBovmycg6g/viewform?usp=sf_link" target="_blank">here</a>.</li>
-    </ul>
+    <img src="Images/Foundation.png" class="logo" /><br />
+    <h2>Teamwork 2019</h2>
+<br />
+    <a href="https://impact.navysealfoundation.org/team/255331" target="_blank"><img src="Images/dollar.png" />Donate to the cause</a>
+    <br />
+    <br />
+    <a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vTJ4qbSz8TeNa0ropgjGPTEjq10XmJO_BSUeJjF4Kmjl5p6-_PeWoxS5p4M90CPawoIz3Jz333X2z7L/pubhtml?gid=2010312221&single=true" target="_blank"><img src="Images/schedule.png" />View the schedule</a>
+    <br />
+    <br />
+    <a href="https://docs.google.com/forms/d/e/1FAIpQLSdeKaa7yzGwI__VOJAyP9dzbamfRQvEBsL6ZbPDtBovmycg6g/viewform?usp=sf_link" target="_blank"><img src="Images/dollar.png" />Workout Signup</a>
+    <br />
+    <br />
+    <br />
+    <img src="Images/Elavus.png" class="logo2" />
 </body>
 </html>
