--- a/index.html
+++ b/index.html
@@ -5,19 +5,45 @@
     <title>Elavus Teamwork Event - Benefiting the Navy Seal Foundation</title>
 </head>
 <body>
-    <img src="Images/Foundation.png" class="logo" /><br />
-    <h2>Teamwork 2019</h2>
-<hr />
-        <a href="https://impact.navysealfoundation.org/team/255331" target="_blank"><img src="Images/dollar.png" />Donate to the cause</a>
+    <div class="table">
+        <div class="headerRow">
+            <div class="headerCellLeft">
+                <img src="Images/Elavus.png" class="logo2" />
+            </div>
+            <div class="headerCellRight">Teamwork 2019</div>
+        </div>
+    </div>
+    <div class="table">
+        <div class="linkRow">
+            <div class="linkCellLeft">
+                <img src="Images/dollar.png" />
+            </div>
+            <div class="linkCellRight">
+                <a class="link" href="https://impact.navysealfoundation.org/team/255331" target="_blank">Donate to the cause</a>
+            </div>
+        </div>
+
+        <div class="linkRow">
+            <div class="linkCellLeft">
+                <img src="Images/schedule.png" />
+            </div>
+            <div class="linkCellRight">
+                <a class="link" href="https://docs.google.com/spreadsheets/d/e/2PACX-1vTJ4qbSz8TeNa0ropgjGPTEjq10XmJO_BSUeJjF4Kmjl5p6-_PeWoxS5p4M90CPawoIz3Jz333X2z7L/pubhtml?gid=2010312221&single=true" target="_blank">View the schedule</a>            
+            </div>
+        </div>
+
+        <div class="linkRow">
+            <div class="linkCellLeft">
+                <img src="Images/dollar.png" />
+            </div>
+            <div class="linkCellRight">
+                <a class="link" href="https://docs.google.com/forms/d/e/1FAIpQLSdeKaa7yzGwI__VOJAyP9dzbamfRQvEBsL6ZbPDtBovmycg6g/viewform?usp=sf_link" target="_blank">Workout Signup</a>
+            </div>
+        </div>
+    </div>
+
     <br />
-    <br />
-    <a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vTJ4qbSz8TeNa0ropgjGPTEjq10XmJO_BSUeJjF4Kmjl5p6-_PeWoxS5p4M90CPawoIz3Jz333X2z7L/pubhtml?gid=2010312221&single=true" target="_blank"><img src="Images/schedule.png" />View the schedule</a>
-    <br />
-    <br />
-    <a href="https://docs.google.com/forms/d/e/1FAIpQLSdeKaa7yzGwI__VOJAyP9dzbamfRQvEBsL6ZbPDtBovmycg6g/viewform?usp=sf_link" target="_blank"><img src="Images/dollar.png" />Workout Signup</a>
-    <br />
-    <br />
-    <br />
-    <img src="Images/Elavus.png" class="logo2" />
+    benefiting
+    <img src="Images/Foundation.png" class="logo" />
 </body>
 </html>
