--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
         <div class="linkRow">
             <div class="linkCellLeft">
-                <img src="Images/dollar.png" />
+                <img src="Images/signup.png" />
             </div>
             <div class="linkCellRight">
                 <a class="link" href="https://docs.google.com/forms/d/e/1FAIpQLSdeKaa7yzGwI__VOJAyP9dzbamfRQvEBsL6ZbPDtBovmycg6g/viewform?usp=sf_link" target="_blank">Workout Signup</a>
