--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <img src="Images/schedule.png" />
             </div>
             <div class="linkCellRight">
-                <a class="link" href="https://docs.google.com/spreadsheets/d/e/2PACX-1vTJ4qbSz8TeNa0ropgjGPTEjq10XmJO_BSUeJjF4Kmjl5p6-_PeWoxS5p4M90CPawoIz3Jz333X2z7L/pubhtml?gid=2010312221&single=true" target="_blank">View the schedule</a>            
+                <a class="link" href="tw2.html" target="_blank">View the schedule</a>            
             </div>
         </div>
 
