--- a/tw2.html
+++ b/tw2.html
@@ -32,13 +32,13 @@
                         <div class="table">
                             <div ng-repeat="athlete in wod.Primary track by $index">
                                 <div class="row">
-                                    <div class="wodPrimaryAthleteCellDesktop">{{athlete}}</div>
+                                    <div class="wodPrimaryAthleteCellDesktop">🏋️ {{athlete}}</div>
                                 </div>
                             </div>
 
                             <div ng-repeat="athlete in wod.Secondary track by $index">
                                 <div class="row">
-                                    <div class="wodSecondaryAthleteCellDesktop">{{athlete}}</div>
+                                    <div class="wodSecondaryAthleteCellDesktop">🏃 {{athlete}}</div>
                                 </div>
                             </div>
                         </div>
@@ -89,13 +89,13 @@
                     <div class="table">
                         <div ng-repeat="athlete in wod.Primary track by $index">
                             <div class="row">
-                                <div class="wodPrimaryAthleteCellMobile">{{athlete}}</div>
+                                <div class="wodPrimaryAthleteCellMobile">🏋️ {{athlete}}</div>
                             </div>
                         </div>
 
                         <div ng-repeat="athlete in wod.Secondary track by $index">
                             <div class="row">
-                                <div class="wodSecondaryAthleteCellMobile">{{athlete}}</div>
+                                <div class="wodSecondaryAthleteCellMobile">🏃 {{athlete}}</div>
                             </div>
                         </div>
                     </div>
