--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <link rel="stylesheet" href="liftlocal.css">
     <script src="Scripts/angular.js"></script>
     <script src="Scripts/angular-ui-router.min.js"></script>
-    <script src="liftlocal.app.js"></script>
-    <script src="liftlocal.factory.js"></script>
+    <script src="liftlocal.app.js?2"></script>
+    <script src="liftlocal.factory.js?2"></script>
     <title>LiftLocal benefiting the Montgomery County YSB Nourish Program</title>
 </head>
 <body ng-app="liftLocalApp" ng-controller="liftLocalController as vm">
