--- a/liftlocal2.html
+++ b/liftlocal2.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <link rel="stylesheet" href="liftLocal2.css">
+    <link rel="stylesheet" href="liftlocal2.css">
     <script src="Scripts/angular.js"></script>
     <script src="Scripts/angular-ui-router.min.js"></script>
     <script src="liftlocal2.app.js"></script>
